Romove position sticky on footer, use flexbox to fix bug where footer can get cut off.

--- a/packages/webapp/src/components/layouts/ContainerLayout/index.module.scss
+++ b/packages/webapp/src/components/layouts/ContainerLayout/index.module.scss
@@ -4,10 +4,6 @@
  */
 @use '~styles/lib/space' as *;
 
-.content {
-	min-height: 91vh;
-}
-
 .footer {
 	padding-bottom: 20px;
 }
